[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "nonebot-adapter-mirai"
version = "0.1.0"
description = "Mirai Api HTTP adapter for nonebot2"
authors = [
    {name = "rf_tar_railt", email = "rf_tar_railt@qq.com"},
    {name = "Mix", email = "admin@yami.im"},
    {name = "yanyongyu", email = "yyy@nonebot.dev"},
]
dependencies = [
    "nonebot2>=2.3.0",
]
requires-python = "<4.0.0,>=3.9.0"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
keywords = ["bot", "qq", "qqbot", "mirai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://nonebot.dev/"
repository = "https://github.com/nonebot/adapter-mirai"
documentation = "https://nonebot.dev/"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["nonebot"]
excludes = ["nonebot/__init__.py", "nonebot/adapters/__init__.py"]

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "nonebot2[httpx,websockets]>=2.3.0",
]
[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]

line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037", "W291"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
defineConstant = { PYDANTIC_V2 = true }
